--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,8 +2,14 @@
   "name": "back-end",
   "version": "1.0.0",
   "main": "index.js",
+  // back-end/package.json
+{
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+-   "test": "echo \"Error: no test specified\" && exit 1",
++   "test": "echo \"No tests specified, skipping\" && exit 0",
+    "build": "node app.js",
+    …
+  }
   },
   "keywords": [],
   "author": "",
