--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,16 +2,8 @@
   "name": "back-end",
   "version": "1.0.0",
   "main": "index.js",
-// back-end/package.json
-{
   "scripts": {
--   "test": "echo \"Error: no test specified\" && exit 1",
-+   "test": "echo \"No tests specified, skipping\" && exit 0",
-    "build": "node app.js",
-    …
-  }
-}
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
