--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    -   "test": "echo \"Error: no test specified\" && exit 1",
-+   "test": "echo \"No tests specified, skipping\" && exit 0",
-    "build": "node app.js",
+    "test": "echo \"No tests specified, skipping\" && exit 0",
+    "build": "echo \"Building back-end...\"",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
