--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,11 +1,11 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "main": "index.js",
+   "main": "app.js",
   "scripts": {
-    "test": "echo \"No tests specified, skipping\" && exit 0",
-    "build": "echo \"Building back-end...\"",
-    "start": "node app.js"
+   "start": "node app.js",
+  "test": "echo \"No tests specified, skipping\" && exit 0",
+   "build": "echo \"Building back-end...\""
   },
   "keywords": [],
   "author": "",
