--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,11 +1,12 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-   "main": "app.js",
+  "main": "app.js",
   "scripts": {
-   "start": "node app.js",
-  "test": "echo \"No tests specified, skipping\" && exit 0",
-   "build": "echo \"Building back-end...\""
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "build": "echo \"Building back-end...\"",
+    "test": "echo \"No tests specified, skipping\" && exit 0"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,11 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
